maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:7: error: '=' expected but ';' found.
   var hauteurDepart;
                    ^ShortestPathMaze:8: error: '=' expected but ';' found.
  var largeurDepart;
                   ^